[tool.poetry]
name = "height-converter"
version = "0.1.0"
description = "A calculator that will convert heights between the metric and imperial systems"
authors = ["Finn English englf105@hsd.k12.or.us"]
readme = "README.md"
packages = [{include = "height_converter"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
